--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@tanstack/react-query": "^5.75.2",
     "@types/bcryptjs": "^2.4.6",
     "animejs": "^4.0.2",
     "bcryptjs": "^3.0.2",
